// Vitest Snapshot v1

exports[`BaseInput > should emit value on input 1`] = `undefined`;

exports[`BaseInput > should render correctly and match snapshot 1`] = `
<div
  class="flex justify-start relative items-center"
  data-v-82c69faf=""
  data-v-inspector-column="3"
  data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseInput.vue"
  data-v-inspector-line="2"
  data-v-inspector-title="BaseInput.vue"
>
  <!--v-if-->
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large"
    data-cy=""
    data-v-82c69faf=""
    pattern=".*"
    placeholder=""
    rows="0"
    style="--height: 40px; --width: 300px;"
    type="search"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
  
</div>
`;

exports[`BaseInput > should render correctly and match snapshot when required and provided 1`] = `
<div
  class="flex justify-start relative items-center"
  data-v-82c69faf=""
  data-v-inspector-column="3"
  data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseInput.vue"
  data-v-inspector-line="2"
  data-v-inspector-title="BaseInput.vue"
>
  <!--v-if-->
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large"
    data-cy=""
    data-v-82c69faf=""
    pattern=".*"
    placeholder=""
    required=""
    rows="0"
    style="--height: 40px; --width: 300px;"
    type="search"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
  
</div>
`;

exports[`BaseInput > should render correctly and match snapshot when required and provided 2`] = `
<div
  class="flex justify-start relative items-center"
  data-v-82c69faf=""
  data-v-inspector-column="3"
  data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseInput.vue"
  data-v-inspector-line="2"
  data-v-inspector-title="BaseInput.vue"
>
  <!--v-if-->
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large"
    data-cy=""
    data-v-82c69faf=""
    pattern=".*"
    placeholder=""
    required=""
    rows="0"
    style="--height: 40px; --width: 300px;"
    type="search"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
  
</div>
`;

exports[`BaseInput > should render correctly and match snapshot with label 1`] = `
<div
  class="flex justify-start relative flex-col items-start border"
  data-v-82c69faf=""
  data-v-inspector-column="3"
  data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseInput.vue"
  data-v-inspector-line="2"
  data-v-inspector-title="BaseInput.vue"
>
  <label
    class="text-xs px-1 text-crisiscleanup-dark-300"
    data-v-82c69faf=""
    data-v-inspector-column="5"
    data-v-inspector-file="/Users/tobi/code/crisiscleanup-4-web/src/components/BaseInput.vue"
    data-v-inspector-line="3"
    data-v-inspector-title="BaseInput.vue"
  >
    Top Label
  </label>
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large border-none"
    data-cy=""
    data-v-82c69faf=""
    pattern=".*"
    placeholder=""
    rows="0"
    style="--height: 40px; --width: 300px;"
    type="search"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
  
</div>
`;
